melhorando rota e testes de /document
